feat(auth): implement protected email verification
